docs-archive/apache-airflow-providers-amazon/9.33.0/_sources/_api/airflow/providers/amazon/aws/utils/index.rst.txt
airflow.providers.amazon.aws.utils
==================================

.. py:module:: airflow.providers.amazon.aws.utils


Submodules
----------

.. toctree::
   :maxdepth: 1

   /_api/airflow/providers/amazon/aws/utils/connection_wrapper/index
   /_api/airflow/providers/amazon/aws/utils/eks_get_token/index
   /_api/airflow/providers/amazon/aws/utils/emailer/index
   /_api/airflow/providers/amazon/aws/utils/identifiers/index
   /_api/airflow/providers/amazon/aws/utils/mixins/index
   /_api/airflow/providers/amazon/aws/utils/openlineage/index
   /_api/airflow/providers/amazon/aws/utils/rds/index
   /_api/airflow/providers/amazon/aws/utils/redshift/index
   /_api/airflow/providers/amazon/aws/utils/sagemaker/index
   /_api/airflow/providers/amazon/aws/utils/sagemaker_unified_studio/index
   /_api/airflow/providers/amazon/aws/utils/sqs/index
   /_api/airflow/providers/amazon/aws/utils/suppress/index
   /_api/airflow/providers/amazon/aws/utils/tags/index
   /_api/airflow/providers/amazon/aws/utils/task_log_fetcher/index
   /_api/airflow/providers/amazon/aws/utils/waiter/index
   /_api/airflow/providers/amazon/aws/utils/waiter_with_logging/index


Attributes
----------

.. autoapisummary::

   airflow.providers.amazon.aws.utils.log


Functions
---------

.. autoapisummary::

   airflow.providers.amazon.aws.utils.trim_none_values
   airflow.providers.amazon.aws.utils.datetime_to_epoch
   airflow.providers.amazon.aws.utils.datetime_to_epoch_ms
   airflow.providers.amazon.aws.utils.datetime_to_epoch_utc_ms
   airflow.providers.amazon.aws.utils.datetime_to_epoch_us
   airflow.providers.amazon.aws.utils.get_airflow_version
   airflow.providers.amazon.aws.utils.get_botocore_version
   airflow.providers.amazon.aws.utils.validate_execute_complete_event
   airflow.providers.amazon.aws.utils.validate_destination_path


Package Contents
----------------

.. py:data:: log

.. py:function:: trim_none_values(obj)

.. py:function:: datetime_to_epoch(date_time)

   Convert a datetime object to an epoch integer (seconds).


.. py:function:: datetime_to_epoch_ms(date_time)

   Convert a datetime object to an epoch integer (milliseconds).


.. py:function:: datetime_to_epoch_utc_ms(date_time)

   Convert a datetime object to an epoch integer (milliseconds) in UTC timezone.


.. py:function:: datetime_to_epoch_us(date_time)

   Convert a datetime object to an epoch integer (microseconds).


.. py:function:: get_airflow_version()

.. py:function:: get_botocore_version()

   Return the version number of the installed botocore package in the form of a tuple[int,...].


.. py:function:: validate_execute_complete_event(event = None)

.. py:function:: validate_destination_path(destination, base_path, *, base_name)

   Ensure ``destination`` stays within ``base_path`` once resolved.

   In multi-file transfers the destination is ``base_path`` concatenated with a key suffix
   returned by ``list_keys``. S3 object names are arbitrary strings controlled by whoever can
   write to the source bucket, so ``..`` segments or an absolute name could place the upload
   outside ``base_path`` once the remote server resolves it on its host. ``base_name`` is the
   operator argument name used in the error message (e.g. ``sftp_path`` or ``ftp_path``).


